# template-python-project

./: .env.example  .gitignore  Jenkinsfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml
modulename/: Dockerfile  pyproject.toml
modulename/src/modulename/: __init__.py  bootstrap.py  config.py  logging.yaml
modulename/src/modulename/domain/: commands.py  events.py
modulename/src/modulename/entrypoints/: __init__.py  app.py
